refactor(backend) : 태그 목록 조회 구현